2005-12-11  Christopher Faylor  <cgf@timesys.com>

	* winsup.api/ltp/dup03.c (cleanup): Fix longstanding off-by-one error
	when setting array element to -1.

2005-06-11  Christopher Faylor  <cgf@timesys.com>

	* winsup.api/pthread/cancel2.c: Use explicit initializer for mutex.
	* winsup.api/pthread/mutex4.c (main): Ditto.
	* winsup.api/pthread/mutex5.c: Reflect change in cygwin default mutex type.
	* winsup.api/pthread/mutex6d.c: Ditto.

2005-06-10  Christopher Faylor  <cgf@timesys.com>

	* winsup.api/winsup.exp: Remove (temporarily?) -nostdinc from build
	since it causes compile failures with gcc 3.4.4.

2005-06-06  Christopher Faylor  <cgf@timesys.com>

	* cygload/cygload.exp: .cpp -> .cc.

2005-06-06  Max Kaehn <slothman@electric-cloud.com>

	* Makefile.in: Test cygload.
	* cygload: New directory.
	* cygload/README: New file.
	* cygload/Makefile: Ditto.
	* cygload/cygload.h: Ditto.
	* cygload/cygload.cc: Ditto.
	* cygload/cygload.exp: Ditto.

2005-05-17  Brian Dessent  <brian@dessent.net>

	* winsup.api/signal-into-win32-api.c (main): Use 'NULL' instead of '0'
	in argument list to avoid compiler warning with gcc4.
	* winsup.api/ltp/execle01.c (main): Ditto.
	* winsup.api/ltp/execlp01.c (main): Ditto.
	* winsup.api/ltp/fcntl07.c (do_exec): Ditto.
	* winsup.api/ltp/fcntl07B.c (do_exec): Ditto.

2005-02-10  Christopher Faylor  <cgf@timesys.com>

	* winsup.api/known_bugs.tcl: Remove dup05, fcntl07B, lseek04, select03,
	unlink06.
	* winsup.api/mmaptest03.c: Make a little more verbose so that it is
	easier to figure out where something failed.

2005-01-09  Christopher Faylor  <cgf@timesys.com>

	* cygrun.c (main): Fix exit code so that it reflects UNIX style.
	* winsup.api/ltp/fork04.c (setup): Accommodate change in putenv
	declaration.

2004-08-24  Corinna Vinschen  <corinna@vinschen.de>

	* winsup.api/mmaptest01.c (main): Accomodate 9x memory usage.

2004-08-24  Corinna Vinschen  <corinna@vinschen.de>
