@@ -1,3 +1,7 @@
+2006-01-01  Christopher Faylor  <cgf@timesys.com>
+
+	* winsup.api/resethand.c: New file.
+
 2005-12-11  Christopher Faylor  <cgf@timesys.com>
 
 	* winsup.api/ltp/dup03.c (cleanup): Fix longstanding off-by-one error
